@startuml
!include style.puml

skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR
skinparam classBorderColor LOGIC_COLOR_T4
skinparam classFontColor white

package "Logic" {
    package "Parser" {
        class DeleteCommandParser
    }

    package "Commands" {
        abstract class Command
        class DeleteCommand
        class ConfirmedDeleteCommand
    }

    class LogicManager
}

Command <|-- DeleteCommand
Command <|-- ConfirmedDeleteCommand

DeleteCommandParser --> DeleteCommand : creates
DeleteCommand ..> ConfirmedDeleteCommand : creates
LogicManager --> ConfirmedDeleteCommand : stores pending command
LogicManager --> DeleteCommand : handles

@enduml
